--- a/app/src/main/res/xml/data_extraction_rules.xml
+++ b/app/src/main/res/xml/data_extraction_rules.xml
@@ -3,14 +3,11 @@
    See https://developer.android.com/about/versions/12/backup-restore#xml-changes
    for details.
 -->
-<data-extraction-rules>
-    <cloud-backup>
-        <!-- TODO: Use <include> and <exclude> to control what is backed up.
-        <include .../>
-        <exclude .../>
-        -->
-    </cloud-backup>
-    <!--
+<data-extraction-rules xmlns:tools="http://schemas.android.com/tools">
+    <include tools:ignore="FullBackupContent" /> .../>
+    <exclude <![CDATA[.../>
+    -->
+    ]]><!--
     <device-transfer>
         <include .../>
         <exclude .../>
