--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -12,7 +12,7 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:src="@drawable/loginbkg"/>
+        android:src="@drawable/outline_account_circle_24"/>
 
     <TextView
         android:id="@+id/full_name"
