--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
         android:layout_marginBottom="10dp"
+        android:layout_marginLeft="15dp"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold" />
