--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -30,8 +30,8 @@
             android:layout_height="125dp"
             android:layout_marginStart="120dp"
             android:layout_marginBottom="15dp"
-            android:src="@drawable/outline_account_circle_24_lavender"
-            app:civ_border_color="@color/lavender"
+            android:src="@drawable/profiledefault"
+            app:civ_border_color="@color/purple_500"
             app:civ_border_width="2dp"/>
 
         <TextView
