--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -30,8 +30,8 @@
             android:layout_height="125dp"
             android:layout_marginStart="120dp"
             android:layout_marginBottom="15dp"
-            android:src="@drawable/profiledefault"
-            app:civ_border_color="@color/purple_500"
+            android:src="@drawable/outline_account_circle_24_lavender"
+            app:civ_border_color="@color/lavender"
             app:civ_border_width="2dp"/>
 
         <TextView
@@ -47,205 +47,205 @@
 
         <!-- Personal Information -->
         <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        app:cardElevation="5dp"
-        app:cardCornerRadius="30dp">
-
-        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp"
-            android:background="@drawable/custom_edittext">
+            android:layout_marginTop="10dp"
+            app:cardElevation="5dp"
+            app:cardCornerRadius="30dp">
 
-            <TextView
-                android:id="@+id/tv_personal_info"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/perInfo"
-                android:textAlignment="center"
-                android:textColor="@color/lavender"
-                android:textSize="32sp"
-                android:textStyle="bold"
-                tools:ignore="TextContrastCheck" />
+                android:orientation="vertical"
+                android:padding="16dp"
+                android:background="@drawable/custom_edittext">
 
-            <EditText
-                android:id="@+id/et_full_name"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/custom_edittext"
-                android:hint="@string/fName"
-                android:drawablePadding="15dp"
-                android:inputType="text"
-                android:padding="14dp"
-                android:textColor="@color/black"
-                android:textColorHint="#5C6BC0"
-                tools:ignore="Autofill,VisualLintTextFieldSize" />
+                <TextView
+                    android:id="@+id/tv_personal_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/perInfo"
+                    android:textAlignment="center"
+                    android:textColor="@color/lavender"
+                    android:textSize="32sp"
+                    android:textStyle="bold"
+                    tools:ignore="TextContrastCheck" />
 
-            <EditText
-                android:id="@+id/et_date_of_birth"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/custom_edittext"
-                android:hint="@string/dOB"
-                android:drawablePadding="15dp"
-                android:inputType="date"
-                android:padding="14dp"
-                android:textColor="@color/black"
-                android:textColorHint="#5C6BC0"
-                tools:ignore="Autofill,VisualLintTextFieldSize" />
+                <EditText
+                    android:id="@+id/et_full_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/custom_edittext"
+                    android:hint="@string/fName"
+                    android:drawablePadding="15dp"
+                    android:inputType="text"
+                    android:padding="14dp"
+                    android:textColor="@color/black"
+                    android:textColorHint="#5C6BC0"
+                    tools:ignore="Autofill,VisualLintTextFieldSize" />
 
-            <EditText
-                android:id="@+id/et_gender"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/custom_edittext"
-                android:hint="@string/gender"
-                android:drawablePadding="15dp"
-                android:inputType="text"
-                android:padding="14dp"
-                android:textColor="@color/black"
-                android:textColorHint="#5C6BC0"
-                tools:ignore="Autofill,VisualLintTextFieldSize" />
+                <EditText
+                    android:id="@+id/et_date_of_birth"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/custom_edittext"
+                    android:hint="@string/dOB"
+                    android:drawablePadding="15dp"
+                    android:inputType="date"
+                    android:padding="14dp"
+                    android:textColor="@color/black"
+                    android:textColorHint="#5C6BC0"
+                    tools:ignore="Autofill,VisualLintTextFieldSize" />
 
-        </LinearLayout>
+                <EditText
+                    android:id="@+id/et_gender"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/custom_edittext"
+                    android:hint="@string/gender"
+                    android:drawablePadding="15dp"
+                    android:inputType="text"
+                    android:padding="14dp"
+                    android:textColor="@color/black"
+                    android:textColorHint="#5C6BC0"
+                    tools:ignore="Autofill,VisualLintTextFieldSize" />
 
-    </androidx.cardview.widget.CardView>
+            </LinearLayout>
 
-    <!-- Contact Information -->
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        app:cardElevation="5dp"
-        app:cardCornerRadius="30dp">
+        </androidx.cardview.widget.CardView>
 
-        <LinearLayout
+        <!-- Contact Information -->
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp"
-            android:background="@drawable/custom_edittext">
+            android:layout_marginTop="20dp"
+            app:cardElevation="5dp"
+            app:cardCornerRadius="30dp">
 
-            <TextView
-                android:id="@+id/tv_contact_info"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/contactInfo"
-                android:textAlignment="center"
-                android:textColor="@color/lavender"
-                android:textSize="32sp"
-                android:textStyle="bold"
-                tools:ignore="TextContrastCheck" />
+                android:orientation="vertical"
+                android:padding="16dp"
+                android:background="@drawable/custom_edittext">
 
-            <EditText
-                android:id="@+id/et_phone_number"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/custom_edittext"
-                android:hint="@string/phnNo"
-                android:drawablePadding="15dp"
-                android:inputType="phone"
-                android:padding="14dp"
-                android:textColor="@color/black"
-                android:textColorHint="#5C6BC0"
-                tools:ignore="Autofill,VisualLintTextFieldSize" />
+                <TextView
+                    android:id="@+id/tv_contact_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/contactInfo"
+                    android:textAlignment="center"
+                    android:textColor="@color/lavender"
+                    android:textSize="32sp"
+                    android:textStyle="bold"
+                    tools:ignore="TextContrastCheck" />
 
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+                <EditText
+                    android:id="@+id/et_phone_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/custom_edittext"
+                    android:hint="@string/phnNo"
+                    android:drawablePadding="15dp"
+                    android:inputType="phone"
+                    android:padding="14dp"
+                    android:textColor="@color/black"
+                    android:textColorHint="#5C6BC0"
+                    tools:ignore="Autofill,VisualLintTextFieldSize" />
 
-    <!-- Address Information -->
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        app:cardElevation="5dp"
-        app:cardCornerRadius="30dp">
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp"
-        android:background="@drawable/custom_edittext">
-
-        <TextView
-            android:id="@+id/tv_address_info"
+        <!-- Address Information -->
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/addressInfo"
-            android:textAlignment="center"
-            android:textColor="@color/lavender"
-            android:textSize="32sp"
-            android:textStyle="bold"
-            tools:ignore="TextContrastCheck" />
+            android:layout_marginTop="20dp"
+            app:cardElevation="5dp"
+            app:cardCornerRadius="30dp">
 
-        <EditText
-            android:id="@+id/et_home_address"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/custom_edittext"
-            android:hint="@string/homeAdd"
-            android:drawablePadding="15dp"
-            android:inputType="text"
-            android:padding="14dp"
-            android:textColor="@color/black"
-            android:textColorHint="#5C6BC0"
-            tools:ignore="Autofill,VisualLintTextFieldSize" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp"
+                android:background="@drawable/custom_edittext">
 
-        <EditText
-            android:id="@+id/et_work_address"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/custom_edittext"
-            android:hint="@string/workAdd"
-            android:drawablePadding="15dp"
-            android:inputType="text"
-            android:padding="14dp"
-            android:textColor="@color/black"
-            android:textColorHint="#5C6BC0"
-            tools:ignore="Autofill,VisualLintTextFieldSize" />
+                <TextView
+                    android:id="@+id/tv_address_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/addressInfo"
+                    android:textAlignment="center"
+                    android:textColor="@color/lavender"
+                    android:textSize="32sp"
+                    android:textStyle="bold"
+                    tools:ignore="TextContrastCheck" />
 
-        <EditText
-            android:id="@+id/et_other_frequent_locations"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/custom_edittext"
-            android:hint="@string/otherLoc"
-            android:drawablePadding="15dp"
-            android:inputType="text"
-            android:padding="14dp"
-            android:textColor="@color/black"
-            android:textColorHint="#5C6BC0"
-            tools:ignore="Autofill,VisualLintTextFieldSize" />
+                <EditText
+                    android:id="@+id/et_home_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/custom_edittext"
+                    android:hint="@string/homeAdd"
+                    android:drawablePadding="15dp"
+                    android:inputType="text"
+                    android:padding="14dp"
+                    android:textColor="@color/black"
+                    android:textColorHint="#5C6BC0"
+                    tools:ignore="Autofill,VisualLintTextFieldSize" />
 
-    </LinearLayout>
-    </androidx.cardview.widget.CardView>
+                <EditText
+                    android:id="@+id/et_work_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/custom_edittext"
+                    android:hint="@string/workAdd"
+                    android:drawablePadding="15dp"
+                    android:inputType="text"
+                    android:padding="14dp"
+                    android:textColor="@color/black"
+                    android:textColorHint="#5C6BC0"
+                    tools:ignore="Autofill,VisualLintTextFieldSize" />
+
+                <EditText
+                    android:id="@+id/et_other_frequent_locations"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/custom_edittext"
+                    android:hint="@string/otherLoc"
+                    android:drawablePadding="15dp"
+                    android:inputType="text"
+                    android:padding="14dp"
+                    android:textColor="@color/black"
+                    android:textColorHint="#5C6BC0"
+                    tools:ignore="Autofill,VisualLintTextFieldSize" />
+
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
 
         <!-- Emergency Contacts -->
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        app:cardElevation="5dp"
-        app:cardCornerRadius="30dp">
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            app:cardElevation="5dp"
+            app:cardCornerRadius="30dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp"
-        android:background="@drawable/custom_edittext">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp"
+                android:background="@drawable/custom_edittext">
 
                 <TextView
                     android:id="@+id/tv_emergency_contacts"
@@ -287,23 +287,23 @@
                     android:textColorHint="#5C6BC0"
                     tools:ignore="Autofill,VisualLintTextFieldSize" />
 
-    </LinearLayout>
-    </androidx.cardview.widget.CardView>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
-                <!-- Medical Information -->
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        app:cardElevation="5dp"
-        app:cardCornerRadius="30dp">
+        <!-- Medical Information -->
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            app:cardElevation="5dp"
+            app:cardCornerRadius="30dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp"
-        android:background="@drawable/custom_edittext">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp"
+                android:background="@drawable/custom_edittext">
 
                 <TextView
                     android:id="@+id/tv_medical_info"
@@ -371,8 +371,8 @@
                     android:textColor="@color/black"
                     android:textColorHint="#5C6BC0"
                     tools:ignore="Autofill,VisualLintTextFieldSize" />
-    </LinearLayout>
-    </androidx.cardview.widget.CardView>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 </ScrollView>
