--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,9 +8,125 @@
     tools:context=".MainActivity3">
 
     <androidx.fragment.app.FragmentContainerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment" />
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/buttons_layout"
+        app:layout_constraintHeight_percent="0.7" />
+
+    <LinearLayout
+        android:id="@+id/buttons_layout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/map"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp">
+
+            <ImageButton
+                android:id="@+id/button1"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginStart="20dp"
+                android:backgroundTint="@color/lavender"
+                android:scaleType="fitCenter"
+                android:src="@drawable/policeicon"
+                app:cornerRadius="20dp"
+                tools:ignore="VisualLintButtonSize" />
+
+            <ImageButton
+                android:id="@+id/button2"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginStart="10dp"
+                android:backgroundTint="@color/lavender"
+                android:scaleType="fitCenter"
+                android:src="@drawable/policeicon"
+                app:cornerRadius="20dp"
+                tools:ignore="VisualLintButtonSize"/>
+
+            <ImageButton
+                android:id="@+id/button3"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginStart="10dp"
+                android:backgroundTint="@color/lavender"
+                android:scaleType="fitCenter"
+                android:src="@drawable/policeicon"
+                app:cornerRadius="20dp"
+                tools:ignore="VisualLintButtonSize" />
+
+            <ImageButton
+                android:id="@+id/button4"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginStart="10dp"
+                android:backgroundTint="@color/lavender"
+                android:scaleType="fitCenter"
+                android:src="@drawable/policeicon"
+                app:cornerRadius="20dp"
+                tools:ignore="VisualLintButtonSize" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/button5"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginStart="20dp"
+                android:backgroundTint="@color/lavender"
+                android:scaleType="fitCenter"
+                android:src="@drawable/policeicon"
+                app:cornerRadius="20dp"
+                tools:ignore="VisualLintButtonSize"/>
+
+            <ImageButton
+                android:id="@+id/button6"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginStart="10dp"
+                android:backgroundTint="@color/lavender"
+                android:scaleType="fitCenter"
+                android:src="@drawable/policeicon"
+                app:cornerRadius="20dp"
+                tools:ignore="VisualLintButtonSize" />
+
+            <ImageButton
+                android:id="@+id/button7"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginStart="10dp"
+                android:backgroundTint="@color/lavender"
+                android:scaleType="fitCenter"
+                android:src="@drawable/policeicon"
+                app:cornerRadius="20dp"
+                tools:ignore="VisualLintButtonSize" />
+
+            <ImageButton
+                android:id="@+id/button8"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginStart="10dp"
+                android:backgroundTint="@color/lavender"
+                android:scaleType="fitCenter"
+                android:src="@drawable/policeicon"
+                app:cornerRadius="20dp"
+                tools:ignore="VisualLintButtonSize"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
