--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -16,7 +16,8 @@
             android:id="@+id/editProfileButton"
             android:layout_width="120dp"
             android:layout_height="60dp"
-            android:layout_marginStart="240dp"
+            android:layout_marginEnd="10dp"
+            android:layout_gravity="end"
             android:backgroundTint="@color/lavender"
             android:text="@string/editProfileButton"
             android:textColor="#263238"
